[gd_scene load_steps=4 format=3 uid="uid://dnp71ad3j8xra"]

[ext_resource type="Theme" uid="uid://b02a2u15epnu7" path="res://ui/ui_theme.tres" id="1_7hqvq"]
[ext_resource type="Script" path="res://scripts/level_select_screen.gd" id="1_xr8hw"]
[ext_resource type="PackedScene" uid="uid://cef4tdqcayith" path="res://ui/level_select_button.tscn" id="2_402hi"]

[node name="LevelSelectScreen" type="CanvasLayer"]
script = ExtResource("1_xr8hw")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.482353, 0.635294, 0.364706, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7hqvq")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="LevelOneButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_402hi")]
visible = false
layout_mode = 2
text = "LEVEL 1"
target_level_path = "res://levels/level_1_cutscene.tscn"

[node name="LevelTwoButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_402hi")]
visible = false
layout_mode = 2
text = "LEVEL 2"
target_level_path = "res://levels/level_2_cutscene.tscn"

[node name="LeveThreeButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_402hi")]
visible = false
layout_mode = 2
text = "LEVEL 3"
target_level_path = "res://levels/level_3_cutscene.tscn"

[node name="BackButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "BACK"

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -163.0
offset_top = 97.0
offset_right = 161.0
offset_bottom = 166.0
grow_horizontal = 2
theme = ExtResource("1_7hqvq")
text = "LEVEL SELECT"
horizontal_alignment = 1

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
